# install-tui

./: Cargo.toml  README.md  arch_dev_setup.sh  development.md  fix.md  fix.sh  install.sh  run.sh
src/: app.rs  art.rs  backend.rs  config.rs  db.rs  detail.rs  indexer.rs  installer.rs  main.rs  model.rs  syncer.rs  ui.rs
src/app/: actions.rs  events.rs  focus.rs  input.rs  mod.rs  search.rs
src/installer/: mod.rs  ops.rs
src/model/: mod.rs
src/ui/: browse.rs  done.rs  install.rs  mod.rs  queue.rs
