[package]
name = "arch-package-tui"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = true }
crossterm = "0.29.0"
dirs = "6.0.0"
nucleo-matcher = "0.3.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.9.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
